--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -3,5 +3,5 @@
 {% block title %}AppBundle:Home:index{% endblock %}
 
 {% block body %}
-<h1>Welcome to the Home:index page</h1>
+<h1>Okay, we're doing things now.</h1>
 {% endblock %}
