Trying a base template.

--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}AppBundle:Home:index{% endblock %}
+{% block title %}Amanda Kay Works{% endblock %}
 
 {% block body %}
 <h1>Okay, we're doing things now.</h1>
