Updated the page text.

--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -1,7 +1,8 @@
-{% extends "::base.html.twig" %}
+{% extends "::../base.html.twig" %}
 
 {% block title %}Amanda Kay Works{% endblock %}
 
 {% block body %}
-<h1>Okay, we're doing things now.</h1>
+<h1>This is my super sweet home page</h1>
+    <h2>Aren't you so impressed?</h2>
 {% endblock %}
